--- a/deployment/views/admin/supermercati.html
+++ b/deployment/views/admin/supermercati.html
@@ -7,35 +7,37 @@
         <div  ng-show="supermercati.length>0">
             <div class="row">
                 <form class="form-inline">
-                    <select class="filter" ui-select2="{ allowClear: true}" ng-model="nomeSearch" placeholder="Punto vendita">
+                    <select class="filter" ui-select2="{ allowClear: true}" ng-model="filter.nome" placeholder="Punto vendita">
                         <option ng-value=""></option>
-                        <option ng-value="supermercato.nome" ng-repeat="supermercato in supermercati|filter:{catena.id: catenaSearch,id_comune: comuneSearch,indirizzo:indirizzoSearch}">{{supermercato.nome}}</option>
+                        <option ng-value="supermercato.nome" ng-repeat="supermercato in supermercati|filter:{catena.id: filter.catena,id_comune: filter.comune,indirizzo:filter.indirizzo}">{{supermercato.nome}}</option>
                     </select>
-                    <select class="filter" ui-select2="{ allowClear: true}" ng-model="indirizzoSearch" placeholder="Indirizzo">
+                    <select class="filter" ui-select2="{ allowClear: true}" ng-model="filter.indirizzo" placeholder="Indirizzo">
                         <option ng-value=""></option>
-                        <option ng-value="supermercato.indirizzo" ng-repeat="supermercato in supermercati|filter:{catena.id: catenaSearch,id_comune: comuneSearch,nome:nomeSearch}">{{supermercato.indirizzo}}</option>
+                        <option ng-value="supermercato.indirizzo" ng-repeat="supermercato in supermercati|filter:{catena.id: filter.catena,id_comune: filter.comune,nome:filter.nome}">{{supermercato.indirizzo}}</option>
                     </select>
-                    <select class="filter" ui-select2="{ allowClear: true}" ng-model="provinciaSearch" placeholder="Provincia">
+                    <select class="filter" ui-select2="{ allowClear: true}" ng-model="filter.provincia" placeholder="Provincia">
                         <option ng-value=""></option>
                         <option ng-value="provincia.nome" ng-repeat="provincia in provincie">{{provincia.nome}}</option>
                     </select>
-                    <select class="filter" ui-select2="{ allowClear: true}" ng-model="comuneSearch" placeholder="Comune">
+                    <select class="filter" ui-select2="{ allowClear: true}" ng-model="filter.comune" placeholder="Comune">
                         <option ng-value=""></option>
-                        <option ng-value="comune.id" ng-repeat="comune in comuni | filter:{provincia: provinciaSearch}">{{comune.nome}}</option>
+                        <option ng-value="comune.id" ng-repeat="comune in comuni | filter:{provincia: filter.provincia}">{{comune.nome}}</option>
                     </select>
-                    <select class="filter" ui-select2="{ allowClear: true}" ng-model="catenaSearch" placeholder="Catena">
+                    <select class="filter" ui-select2="{ allowClear: true}" ng-model="filter.catena" placeholder="Catena">
                         <option ng-value=""></option>
                         <option ng-value="catena.nome" ng-repeat="catena in catene">{{catena.nome}}</option>
                     </select>
+                    <!--
                     <select class="filter" ui-select2="{ allowClear: true}" ng-model="capoEquipeSearch" placeholder="Capi Equipe">
                         <option ng-value=""></option>
                         <option ng-value="capo_equipe.nome" ng-repeat="capo_equipe in capi_equipe">{{capo_equipe.nome}}</option>
                     </select>
+                    -->
                 </form>
             </div>
             <div class="row">
                 <button class="btn btn-primary" ng-click="openNewSupermercato()">Inserisci nuovo</button>
-                <span>Supermercati trovati: {{(supermercati|filter:{catena.nome: catenaSearch,id_comune: comuneSearch, provincia: provinciaSearch,nome:nomeSearch,indirizzo: indirizzoSearch}).length}}</span>
+                <span>Supermercati trovati: {{(supermercati|filter:{catena.nome: filter.catena,id_comune: filter.comune, provincia: filter.provincia,nome:filter.nome,indirizzo: filter.indirizzo}).length}}</span>
             </div>
             <div class="row">
                 <table class="table table-bordered table-striped table-hover table-container table-condensed">
@@ -49,8 +51,8 @@
                         <th>ID</th><th>Nome</th><th>Indirizzo</th>
                        <th>Provincia</th><th>Comune</th><th>Catena</th><th>Capi Equipe</th><th>Modifica</th>
                     </thead>
-                    <tbody> 
-                        <tr class="cursor-pointer" ng-repeat="supermercato in supermercati|filter:{catena.nome: catenaSearch,id_comune:comuneSearch,provincia:provinciaSearch,nome:nomeSearch,indirizzo:indirizzoSearch}| limitTo:pagination.currentPage()" rel="{{supermercato.index}}" ng-click="openSetSupermercato()">
+                    <tbody>
+                        <tr class="cursor-pointer" ng-repeat="supermercato in supermercati|filter:{catena.nome: filter.catena,id_comune: filter.comune, provincia: filter.provincia,nome:filter.nome,indirizzo: filter.indirizzo}|limitTo:pagination.currentPage()" rel="{{supermercato.index}}">
                             <td ng-click="">
                                 <input 
                                     type="checkbox"
@@ -98,8 +100,7 @@
                             <th></th>
                             <th></th>
                         <!--
-                            <th>Nome</th><th>Indirizzo</th><th>Comune</th><th>Catena</th><th>Capi equipe</th>
-                            <th>Area</th>
+                            <th>Nome</th><th>Indirizzo</th><th>Comune</th><th>Catena</th><th>Area</th>
                         -->
                         </tr>
                     </thead>
@@ -134,6 +135,16 @@
                             </td>
                         </tr>
                         <tr>
+                            <th>Area</th>
+                            <td>
+                                <select class="filter" ui-select2="{ allowClear: true}" ng-model="supTmpl.id_area" placeholder="Area">
+                                    <option ng-value=""></option>
+                                    <option ng-value="area.id" ng-repeat="area in aree">{{area.nome}}</option>
+                                </select>
+                            </td>
+                        </tr>
+                        <!--
+                        <tr>
                             <th>Capo equipe</th>
                             <td>
                                 <select class="filter" ui-select2="{ allowClear: true}" multiple ng-model="supTmpl.capi_equipe" placeholder="Capi equipe">
@@ -142,6 +153,7 @@
                                 </select>
                             </td>
                         </tr>
+                        -->
                     </tbody>
                     <tfoot></tfoot>
                 </table>
